Cleaning up p/2