@@ -86,7 +86,7 @@ public class JSONArray {
     /**
      * The arrayList where the JSONArray's properties are kept.
      */
-    private ArrayList myArrayList;
+    private final ArrayList myArrayList;
 
 
     /**
@@ -619,7 +619,7 @@ public class JSONArray {
      * @return this.
      */
     public dev.brighten.ac.utils.json.JSONArray put(int value) {
-        put(new Integer(value));
+        put(Integer.valueOf(value));
         return this;
     }
 
@@ -631,7 +631,7 @@ public class JSONArray {
      * @return this.
      */
     public dev.brighten.ac.utils.json.JSONArray put(long value) {
-        put(new Long(value));
+        put(Long.valueOf(value));
         return this;
     }
 
@@ -723,7 +723,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public dev.brighten.ac.utils.json.JSONArray put(int index, int value) throws JSONException {
-        put(index, new Integer(value));
+        put(index, Integer.valueOf(value));
         return this;
     }
 
@@ -739,7 +739,7 @@ public class JSONArray {
      * @throws JSONException If the index is negative.
      */
     public dev.brighten.ac.utils.json.JSONArray put(int index, long value) throws JSONException {
-        put(index, new Long(value));
+        put(index, Long.valueOf(value));
         return this;
     }
 
