@@ -95,7 +95,7 @@ public class JSONObject {
     /**
      * The map where the JSONObject's properties are kept.
      */
-    private Map map;
+    private final Map map;
 
 
     /**
@@ -241,7 +241,7 @@ public class JSONObject {
      * @param names  An array of strings, the names of the fields to be obtained
      *               from the object.
      */
-    public JSONObject(Object object, String names[]) {
+    public JSONObject(Object object, String[] names) {
         this();
         Class c = object.getClass();
         for (int i = 0; i < names.length; i += 1) {
@@ -508,7 +508,7 @@ public class JSONObject {
             if (b == '0' && string.length() > 2 &&
                     (string.charAt(1) == 'x' || string.charAt(1) == 'X')) {
                 try {
-                    return new Integer(Integer.parseInt(string.substring(2), 16));
+                    return Integer.valueOf(Integer.parseInt(string.substring(2), 16));
                 } catch (Exception ignore) {
                 }
             }
@@ -517,9 +517,9 @@ public class JSONObject {
                         string.indexOf('e') > -1 || string.indexOf('E') > -1) {
                     return Double.valueOf(string);
                 } else {
-                    Long myLong = new Long(string);
+                    Long myLong = Long.valueOf(string);
                     if (myLong.longValue() == myLong.intValue()) {
-                        return new Integer(myLong.intValue());
+                        return Integer.valueOf(myLong.intValue());
                     } else {
                         return myLong;
                     }
@@ -1290,7 +1290,7 @@ public class JSONObject {
      * @throws dev.brighten.ac.utils.json.JSONException If the key is null.
      */
     public dev.brighten.ac.utils.json.JSONObject put(String key, int value) throws dev.brighten.ac.utils.json.JSONException {
-        put(key, new Integer(value));
+        put(key, Integer.valueOf(value));
         return this;
     }
 
@@ -1303,7 +1303,7 @@ public class JSONObject {
      * @throws dev.brighten.ac.utils.json.JSONException If the key is null.
      */
     public dev.brighten.ac.utils.json.JSONObject put(String key, long value) throws dev.brighten.ac.utils.json.JSONException {
-        put(key, new Long(value));
+        put(key, Long.valueOf(value));
         return this;
     }
 
@@ -1574,7 +1574,7 @@ public class JSONObject {
          *
          * @return NULL.
          */
-        protected final Object clone() {
+        protected Object clone() {
             return this;
         }
 
